# multiModelChat

./: .env.example  .gitignore  CHANGELOG.md  CONFIG_FIX_SUMMARY.md  DOUBAO_INTEGRATION_SUMMARY.md  LICENSE  README.md  api_models.json  demo_model_discovery.py  dev_tools.py  models_cache.json  pyproject.toml  pytorch_test_cache.json  run_app.py  test_doubao_integration.py  test_openai_simple.py  verify_setup.py
.kiro/specs/multi-llm-comparator/: design.md  requirements.md  tasks.md
.kiro/specs/non-streaming-output-optimization/: requirements.md
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  MODEL_CONFIGURATION.md  README.md  TROUBLESHOOTING.md
src/multi_llm_comparator/: __init__.py  main.py
src/multi_llm_comparator/core/: __init__.py  config.py  exceptions.py  models.py  validators.py
src/multi_llm_comparator/inferencers/: __init__.py  base.py  gguf_inferencer.py  openai_inferencer.py  pytorch_inferencer.py
src/multi_llm_comparator/services/: __init__.py  api_model_manager.py  error_handler.py  export_service.py  inference_engine.py  memory_manager.py  model_manager.py  model_scanner.py  recovery_manager.py  session_service.py
src/multi_llm_comparator/ui/: __init__.py  components.py  enhancements.py  utils.py
tests/: __init__.py  test_error_handler.py  test_export_service.py  test_gguf_inferencer.py  test_inference_engine.py  test_inferencers.py  test_markdown_rendering.py  test_model_manager.py  test_model_scanner.py  test_pytorch_inferencer.py  test_raw_text_viewing.py  test_recovery_manager.py  test_session_service.py  test_ui.py  test_ui_components.py  test_ui_enhancements.py  test_ui_enhancements_simple.py  test_ui_integration.py  test_ui_output_display.py  test_validators.py
